# retarget

./: CMakeLists.txt  EXTRACTION.md  README.md
core/: README.md  mesh.cpp
core/garment/: coordinate_system.hpp  optimize.cpp  optimize.hpp
core/garment/forms/: CMakeLists.txt  CurveCenterTargetForm.cpp  CurveCenterTargetForm.hpp  CurveConstraintForm.cpp  CurveConstraintForm.hpp  FitForm.cpp  FitForm.hpp  GarmentALForm.cpp  GarmentALForm.hpp  GarmentForm.cpp  GarmentForm.hpp
ports/: mesh.h  mesh_sink.h  mesh_source.h  sibling-repos.txt
